# lead-generation-agent

./: .env.example  .gitignore  README.md  pyproject.toml
app/agents/: enrich.py  relevance.py
app/api/: deps.py  main.py
app/api/routes/: icps.py  runs.py  scoring.py  sources.py
app/clients/: cslb.py  cslb_ingest.py  llm.py  scraper.py  source.py  web_search.py  zoominfo.py
app/core/: config.py  ids.py  logging.py
app/models/: __init__.py  company.py  contact.py  enrichment.py  icp.py  icp_blocks.py  plan.py  run.py  score.py  signal.py
app/pipeline/: enrichment.py  exporter.py  planner.py  retrieval.py  runner.py  scoring.py  signals.py  summarizer.py
app/scripts/: smoke_cslb.py
app/static/: index.html
app/store/: icp_repo.py  runs.py
configs/: scoring.yaml
configs/icps/: _example.yaml  cslb-electrical-midmarket.yaml  manufacturing-midmarket.yaml
configs/llm-prompts/: extract.md  planner.md  relevance.md  signal_extraction.md  summary.md
docs/: development-plan.md  prd.md  secondary_prd.md
