[project]
name = "lead-generation-agent"
version = "0.1.0"
description = "AI lead generation agent over ZoomInfo for an agentic ERP platform."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "pyyaml>=6.0",
    "structlog>=24.1",
    "openpyxl>=3.1",
    "openai>=1.40",
    "asteval>=1.0",
    "tenacity>=9.0",
    "python-ulid>=2.7",
    "python-multipart>=0.0.9",
    "aiosqlite>=0.20",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"
